Fix hamburger and logo alignment

--- a/components/common/Navbar/Navbar.module.scss
+++ b/components/common/Navbar/Navbar.module.scss
@@ -24,11 +24,10 @@
 .headerContainer {
   width: 100%;
   margin: 0 auto;
-  padding: 0 0.5rem 0 1rem;
 }
 
 .navigation {
-  padding: 1rem 1rem;
+  padding: 1rem 0;
 
   &.navigationTransparent {
     padding: 2.5rem 1rem 1rem;
@@ -53,9 +52,10 @@
 .toolbarIcons {
   display: flex;
   align-items: center;
+  margin-right: -0.75rem;
 
   button {
-    margin-left: 0.5rem !important;
+    margin-left: 0.5rem;
   }
 
   @include mixins.breakpoint-up(lg) {
@@ -68,8 +68,9 @@
 
 .logo {
   cursor: pointer;
+  width: 5rem;
+  height: auto;
   @include mixins.breakpoint-up(lg) {
     width: 8rem;
-    height: auto;
   }
 }
